tried to fix the github page view

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="projects-card__inner-wrapper">
             <div class="projects-card__inner-wrapper--img2">
               <img src="img/purple_rectangle.png" alt="Purple rectangle" />
-              <img src="/img/mask_for_purple.png" alt="Building" />
+              <img src="./img/mask_for_purple.png" alt="Building" />
             </div>
             <div class="projects-card__inner-wrapper--text-block">
               <h3 class="text-block__subtitle">INTERNATIONAL</h3>
@@ -171,7 +171,7 @@
       </section>
       <section class="news-screen" id="news">
           <div class="news_line">
-              <img src="/img/white_line.png" alt="White line" />
+              <img src="./img/white_line.png" alt="White line" />
             </div>
             <div class="news_title">
                 <h2>LATEST NEWS</h2>
@@ -230,7 +230,7 @@
                     </div>
                     <div class="news-container__card--meta">
                         <div class="meta-img">
-                            <img src="/img/news_avatar3.png" alt="Avatar Alice" />
+                            <img src="./img/news_avatar3.png" alt="Avatar Alice" />
                         </div>
                         <div class="meta-info">
                             <h5>ALICE WARD</h5>
@@ -291,7 +291,7 @@
                     </div>
                     <div class="news-container__card--meta">
                         <div class="meta-img">
-                            <img src="/img/news_avatar3.png" alt="Avatar Alice" />
+                            <img src="./img/news_avatar3.png" alt="Avatar Alice" />
                         </div>
                         <div class="meta-info">
                             <h5>ALICE WARD</h5>
@@ -303,7 +303,7 @@
       </section>
       <section class="gallery-screen">
         <div class="gallery-line">
-          <img src="/img/black_line.png" alt="Black line" />
+          <img src="./img/black_line.png" alt="Black line" />
         </div>
         <h2 class="gallery-title">GALLERY</h2>
         <div class="gallery-container">
@@ -334,7 +334,7 @@
           <!-- the form stays better her -->
         <section class="form-screen" id="contact">
           <div class="form__line">
-            <img src="/img/black_line.png" alt="Black Line" />
+            <img src="./img/black_line.png" alt="Black Line" />
           </div>
           <h2 class="form__title">GET IN TOUCH</h2>
           <div class="form__container">
