--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- slick part -->
-    <link rel="stylesheet" type="text/css" href="/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="/slick/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="./slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -112,7 +112,7 @@
             </h4>
           </div>
           <figure class="landing-screen__card--down-arrow">
-             <img class="arrow" src="/img/arrow.svg" alt="Down Arrow" onclick="onArrowClick()"></i>
+             <img class="arrow" src="./img/arrow.svg" alt="Down Arrow" onclick="onArrowClick()"></i>
           </figure>
         </section>
       </section>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="news-container__card--meta">
                         <div class="meta-img">
-                            <img class="" src="/img/news_avatar1.png" alt="Avatar Alja" />
+                            <img class="" src="./img/news_avatar1.png" alt="Avatar Alja" />
                         </div>
                         <div class="meta-info">
                             <h5>ALJA BRUN</h5>
@@ -251,7 +251,7 @@
                     </div>
                     <div class="news-container__card--meta">
                         <div class="meta-img">
-                            <img src="/img/news_avatar1.png" alt="Avatar Alja" />
+                            <img src="./img/news_avatar1.png" alt="Avatar Alja" />
                         </div>
                         <div class="meta-info">
                             <h5>ALJA BRUN</h5>
@@ -309,20 +309,20 @@
         <div class="gallery-container">
           <div class="big_img_area">
             <img src="img/gal1.png" alt="Big Area Building" />
-            <img class="symbol" src="/img/symbol360.png" alt="360 Icon" />
+            <img class="symbol" src="./img/symbol360.png" alt="360 Icon" />
           </div>
           <div class="first">
-            <img src="/img/gal2.png" alt="First" />
+            <img src="./img/gal2.png" alt="First" />
           </div>
 
           <div class="second">
-            <img src="/img/gal3.png" alt="Second" />
+            <img src="./img/gal3.png" alt="Second" />
           </div>
           <div class="third">
-            <img src="/img/gal4.png" alt="Third" />
+            <img src="./img/gal4.png" alt="Third" />
           </div>
           <div class="fourth">
-            <img src="/img/gal5.png" alt="Fourth" />
+            <img src="./img/gal5.png" alt="Fourth" />
           </div>
         </div>
         <button class="gallery-btn">SEE MORE</button>
@@ -395,12 +395,12 @@
       type="text/javascript"
     ></script>
     <script
-      src="/slick/slick.js"
+      src="./slick/slick.js"
       type="text/javascript"
-      charset="utf-8"
-    ></script>
+      charset="utf-8">
     </script>
-    <script type="text/javascript" src="/slick/slick.min.js"></script>
+    </script>
+    <script type="text/javascript" src="./slick/slick.min.js"></script>
     <script src="script.js"></script>
     <script type="text/javascript">
     </script>
