fixed the github pages view

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Monticello</title>
-    <link rel="shortcut icon" type="image/jpg" href="/img/favicon.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="./img/favicon.png"/>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -210,7 +210,7 @@
                     </div>
                     <div class="news-container__card--meta">
                         <div class="meta-img">
-                        <img src="/img/news_avatar2.png" alt="Avatar Dominic"/>
+                        <img src="./img/news_avatar2.png" alt="Avatar Dominic"/>
                     </div>
                     <div class="meta-info">
                         <h5>DOMINIC FREEMAN</h5>
@@ -271,7 +271,7 @@
                     </div>
                     <div class="news-container__card--meta">
                         <div class="meta-img">
-                            <img src="/img/news_avatar2.png" alt="Avatar Dominic" />
+                            <img src="./img/news_avatar2.png" alt="Avatar Dominic" />
                         </div>
                         <div class="meta-info">
                             <h5>DOMINIC FREEMAN</h5>
