fixed the mailto error

--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@
               <i class="fa fa-clock-o" aria-hidden="true"></i> From 07:05AM to
               19:30PM <br />
             </div>
-            <form name="form" action="mailto:raluca.baceanu@gmail.com" method="post" enctype="text/plain" class="form__container--labels">
+            <!-- <form name="form" action="mailto:raluca.baceanu@gmail.com" method="post" enctype="text/plain" class="form__container--labels"> This raises errors in some browsers consoles-->
+            <form name="form" class="form__container--labels">
                 <!-- this is not super fancy -->
               <label for="fname"></label>
               <input
