--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="header-container--hrefs">
             <div class="href-container">
               <a class="href--elem" href="#about" data-toggle="collapse"
-                ><i class="fa fa-circle-thin" aria-hidden="true"></i>About Us</a
+                ><i class="fa fa-circle" aria-hidden="true"></i>About Us</a
               >
             </div>
             <div class="href-container">
